<resources>
    <string name="app_name">My Portfolio</string>
    <string name="intro">Me</string>
    <string name="contact">Contact</string>
    <string name="git">Github</string>
    <string name="playstore">Playstore</string>
    <string name="insta">Instagram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_git">My Github</string>
    <string name="public_repos">Public Repos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="contact_information">Contact Information</string>
    <string name="_91_8389087428">+91 8389087428</string>
    <string name="_91_6294284798">+91 6294284798</string>
    <string name="mannapapan_r_gmail_com">mannapapan.r@gmail.com</string>
    <string name="email">Email</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="me">Papan Manna</string>
    <string name="address">Address</string>
    <string name="address_location">3699, Madurdaha, Kolkata - 700107 (West Bengal).</string>
</resources>
