<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="com.example.myportfolio.git.GitProfileModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".git.GitFragment">

        <include
            android:id="@+id/header_layout"
            layout="@layout/toolbar_title_center"
            app:title="@{@string/my_git}" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_layout">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:background="@color/white">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/profile_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@color/white"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_image"
                                android:layout_width="110dp"
                                android:layout_height="110dp"
                                android:layout_gravity="center"
                                android:padding="4dp"
                                app:civ_border_color="@color/background_dark"
                                app:civ_border_width="2dp"
                                app:imageUrl="@{user.avatarUrl}" />
                        </FrameLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical"
                            android:paddingStart="8dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="2dp"
                            android:paddingBottom="4dp">

                            <com.example.myportfolio.TextViewMerrieWeatherRegular
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@{user.name}"
                                android:textColor="@color/black" />

                            <com.example.myportfolio.TextViewMerrieWeatherRegular
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="4dp"
                                android:text="@{user.bio}"
                                 />
                        </LinearLayout>


                    </LinearLayout>

                    <android.support.design.card.MaterialCardView
                        android:id="@+id/tab_layout"
                        style="style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_header"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white"
                        app:cardElevation="8dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/tab_header"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="8dp"
                                android:paddingBottom="4dp"
                                android:weightSum="3">

                                <com.example.myportfolio.TextViewMerrieWeatherRegular
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/repositories"
                                    android:textAllCaps="true" />

                                <com.example.myportfolio.TextViewMerrieWeatherRegular
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/following"
                                    android:textAllCaps="true" />

                                <com.example.myportfolio.TextViewMerrieWeatherRegular
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@string/followers"
                                    android:textAllCaps="true" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tab_header"
                                android:layout_gravity="center"
                                android:orientation="horizontal"
                                android:paddingBottom="5dp"
                                android:weightSum="3">

                                <com.example.myportfolio.TextViewMerrieWeatherItalic
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(user.publicRepos)}"
                                    android:textAllCaps="true"
                                    android:textColor="@color/colorAccent" />

                                <com.example.myportfolio.TextViewMerrieWeatherItalic
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(user.following)}"
                                    android:textAllCaps="true"
                                    android:textColor="@color/colorAccent" />

                                <com.example.myportfolio.TextViewMerrieWeatherItalic
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center"
                                    android:text="@{String.valueOf(user.followers)}"
                                    android:textAllCaps="true"
                                    android:textColor="@color/colorAccent" />

                            </LinearLayout>
                        </RelativeLayout>

                    </android.support.design.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tab_layout"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:layout_marginRight="@dimen/activity_margin"
                        android:layout_marginBottom="8dp"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:padding="4dp">

                            <com.example.myportfolio.TextViewMerrieWeatherBold
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawableStart="@drawable/ic_cloud_circle_24dp"
                                android:drawablePadding="4dp"
                                android:gravity="center"
                                android:padding="4dp"
                                android:text="@string/public_repos"
                                android:textColor="@color/white" />
                        </FrameLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/reposList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:itemCount="10"
                            tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_recycler_git_repos">

                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>
        </android.support.v4.widget.SwipeRefreshLayout>


    </RelativeLayout>
</layout>